css/style.css
@font-face {
    font-family: "Roboto Mono";
    src: url("../fonts/RobotoMono-Regular.ttf") format("truetype");
    font-style: normal;
    font-weight: 400;
    text-rendering: optimizeLegibility;
}

@font-face {
    font-family: "Roboto Mono";
    src: url("../fonts/RobotoMono-Italic.ttf") format("truetype");
    font-style: italic;
    font-weight: 400;
    text-rendering: optimizeLegibility;
}

@font-face {
    font-family: "Roboto Mono";
    src: url("../fonts/RobotoMono-Bold.ttf") format("truetype");
    font-style: normal;
    font-weight: 700;
    text-rendering: optimizeLegibility;
}

@font-face {
    font-family: "Roboto Mono";
    src: url("../fonts/RobotoMono-BoldItalic.ttf") format("truetype");
    font-style: italic;
    font-weight: 700;
    text-rendering: optimizeLegibility;
}

:root {
    --global-font-size: 16px;
    --global-font-color: #444444;
    --mono-font-stack: Roboto Mono, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
    --font-stack: Roboto Mono, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
    --global-line-height: 1.6em;
    --page-width: 70em;
    --display-h1-decoration: 1;
    --code-bg-color: #FFFFFF;
}

.sidebar-heading {
    text-transform: none;
    letter-spacing: 0;
    font-weight: 400;
}

.box-masonry .box-masonry-image {
    background: #FFFFFF;
}

.box-masonry,
.box-masonry:hover {
    box-shadow: none;
}

.label {
    font-family: var(--font-stack);
}

body {
    font-family: var(--font-stack);
    font-size: var(--global-font-size);
    background-color: #FFFFFF;
    margin-bottom: 60px;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
    font-family: var(--font-stack);
    clear: both;
}

h1 {
    margin-bottom: 150px;
}

h2 {
    text-decoration: underline;
}

.content-column-content p,
.content-column-content li {
    color: #666666;
}

.btn-ghost {
    color: #666666;
    background-color: transparent;
    border-color: #333333;
    font-weight: 400;
    font-family: var(--font-stack);
    padding: 6px 12px;
    font-size: 18px;
    line-height: 1.55;
    border-radius: 0;
    margin-left: 0;
    margin-top: 5px;
}

.content-column-content .command {
    color: #AAAAAA;
}

p.social a {
    margin: 0 0 10px 0;
    display: inline-block;
    width: 30px;
    height: 30px;
    border: none;
    line-height: 30px;
    font-size: 25px;
    text-align: center;
    vertical-align: bottom;
    color: #999999;
    -webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out;
}

.active a {
    text-decoration: underline;
}

strong {
    font-weight: bold;
}

.logo {
    font-weight: normal;
}

.terminal-menu li {
    margin-right: 30px;
}

figure {
    margin: 15px 60px;
}

.footer {
    clear: both;
    margin-top: 100px;
    padding-top: 10px;;
    border-top: 1px solid var(--secondary-color);
    color: var(--global-font-color);
    text-align: center;
}

.image-grid {
    display: grid;
    grid-template-rows: auto;
    grid-gap: 1em;
    grid-template-columns: repeat(auto-fit,
    minmax(calc(var(--page-width) / 4), 1fr));
}

.terminal-prompt::after {
    -webkit-animation: cursor 1s infinite;
    animation: cursor 1s infinite;
    width: 9px;
    margin-left: 0;
}

.terminal-prompt::before {
    content: none;
}

.terminal-nav *,
.terminal-nav *::after {
    font-size: calc(var(--global-font-size) * 1.08);
}

.gallery-image {
    margin-top: 10px;
    margin-bottom: 10px;
}

.post h2 {
    margin-bottom: calc(var(--global-line-height) * 0.3);
}

.projects-list {
    position: relative;
    top: 0;
}

.project h2 {
    padding-top: 0;
    margin: 0 0 5px;
}

.talks-list {
    position: relative;
    padding-left: 140px;
    top: 0;
}

.talk h2 {
    padding-top: 0;
    margin: 0 0 5px;
}

.talks-list .date {
    display: inline-block;
    position: absolute;
    left: 0;
    width: 130px;
    z-index: 400;
    padding-top: 0;
}

@media only screen and (max-width: 850px) {
    h1 {
        padding: calc(var(--global-space) * 1.1) 0 calc(var(--global-space) * 2);
    }

    p {
        margin: 0 0 calc(var(--global-line-height) * 0.7);
    }

    .logo {
        padding: var(--global-space) 0 var(--global-space);
    }

    .site-name {
        text-transform: uppercase;
        width: 2ch;
        overflow: hidden;
        display: inline-flex;
    }

    .terminal-nav {
        align-items: flex-start;
        flex-direction: column;
        display: flex;
    }

    .terminal-nav *,
    .terminal-nav *::after {
        font-size: calc(var(--global-font-size) * 1.15);
    }

    .terminal-menu ul {
        align-items: flex-start;
        display: flex;
        flex-direction: row;
        justify-content: left;
        margin-top: 0;
        margin-bottom: calc(var(--global-space) * 1.2);
    }

    .terminal-menu li {
        margin-right: 20px;
    }

    figure {
        margin: 5px 30px;
    }

    .projects-list {
        position: relative;
        padding-left: 0;
        top: 0;
    }

    .project h2 {
        padding-top: 0;
    }

    .talks-list {
        position: relative;
        padding-left: 0;
        top: 0;
    }

    .talk h2 {
        padding-top: 0;
    }

    .talks-list .date {
        display: none;
        position: absolute;
        left: 0;
        width: 150px;
        z-index: 400;
        font-weight: bold;
        padding-top: 0;
    }

    .footer {
        margin-top: 50px;
        padding-top: 5px;;
    }
}

